--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo": "~52.0.4",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react-native": "0.76.1",
+    "react-native-fullwidth-image": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
